--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,29 +1,34 @@
+name: render
 on:
   push:
     branches: main
-
-name: Render and Publish
-
+permissions:
+  contents: write
 jobs:
-  build-deploy:
+  render:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
-
     steps:
+      # Checkout this repo
       - uses: actions/checkout@v4
 
-      - name: Install Quarto CLI
-        uses: quarto-dev/quarto-actions/setup@v2
-
-      - name: Build site 🔧
-        run: |
-          quarto render
-
-      - name: Publish to GitHub Pages (and render)
-        uses: quarto-dev/quarto-actions/publish@v2
+      # Install R
+      - uses: r-lib/actions/setup-r@v2
         with:
-          target: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+          use-public-rspm: true
+
+      # Install R packages
+      - uses: r-lib/actions/setup-r-dependencies@v2
+
+      # Install pandoc
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      # Render the qmd file into qmd/
+      - name: Render Quarto Slides
+        shell: Rscript {0}
+        run: quarto::quarto_render("index.qmd")
+
+      # Publish rmd/ to GitHub pages
+      - name: Publish to GitHub pages 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        with:
+          folder: qmd
